@@ -658,6 +658,10 @@ static struct target_ops spu_target_ops = {
   NULL,  /* supports_z_point_type */
   NULL,
   NULL,
+  NULL, /* stopped_by_sw_breakpoint */
+  NULL, /* supports_stopped_by_sw_breakpoint */
+  NULL, /* stopped_by_hw_breakpoint */
+  NULL, /* supports_stopped_by_hw_breakpoint */
   NULL,
   NULL,
   NULL,
